fixed issue concering images being different on firefox an chrome

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -11,6 +11,7 @@ html {
     background: rgb(175, 200, 255);
     font-family: "Permanent Marker", Arial, Helvetica, sans-serif;
     font-size: 16px;
+    height: 100vh;
 }
 
 h1 {
